--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
         host: ${{ secrets.FTP_SERVER }}
         user: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        remoteDir: "./projektydlaszkolwordpress/wp-content/themes/projektydlaszkol"
+        remoteDir: "projektydlaszkolwordpress/wp-content/themes/projektydlaszkol"
         options: "--delete --asci"
