--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
     - name: Upload ftp
       uses: sebastianpopp/ftp-action@releases/v2
       with:
-        host: arcusgroup.home.pl
-        user: hydrotrade@hydrotrade.pl
-        password: ${{secrets.FTP_PASSWORD}}
+        host: ${{secrets.FTP_SERVER}}
+        user: ${{secrets.FTP_USERNAME}}
+        password: ${secrets.FTP_PASSWORD_PROJEKTYDLASZKOL}}
         remoteDir: "/projektydlaszkolwordpress/wp-content/themes/projektydlaszkol"
         options: "--delete --asci"
