--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,22 @@
-name: Deploy via ftp
-on: push
+name: Staging deploy
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+  
 jobs:
-  deploy:
-    name: Deploy
+  build:
+    name: Build and deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Upload ftp
-      uses: sebastianpopp/ftp-action@releases/v2
+    - name: multiple SSH commands
+      uses: appleboy/ssh-action@master
       with:
-        host: ${{secrets.FTP_SERVER}}
-        user: ${{secrets.FTP_USERNAME}}
-        password: ${secrets.FTP_PASSWORD_PROJEKTYDLASZKOL}}
-        remoteDir: "/projektydlaszkolwordpress/wp-content/themes/projektydlaszkol"
-        options: "--delete --asci"
+        host: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD_PROJEKTYDLASZKOL }}
+        port: ${{ secrets.FTP_PORT }}
+        script: |
+          cd /home/hydrotrade/public_html/projektydlaszkolwordpress/wp-content/themes/projektydlaszkol/
+          git fetch --all
