--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
       with:
         host: ${{secrets.FTP_SERVER}}
         user: ${{secrets.FTP_USERNAME}}
-        password: ${secrets.FTP_PASSWORD_PROJEKTYDLASZKOL}}
+        password: ${{secrets.FTP_PASSWORD_PROJEKTYDLASZKOL}}
         remoteDir: "/home/hydrotrade/public_html/projektydlaszkolwordpress/wp-content/themes/projektydlaszkol/"
         options: "--delete --asci"
